--- a/index.html
+++ b/index.html
@@ -143,6 +143,23 @@
               <div class="overview__rating-count">429 votes</div>
             </div>
           </div>
+
+          <div class="details">
+            <div class="description">
+              <p class="description__paragraph paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+                nisi dignissimos debitis ratione sapiente saepe. Accusantium
+                cumque, quas, ut corporis incidunt deserunt quae architecto
+                voluptate.
+              </p>
+
+              <p class="description__paragraph paragraph">
+                Accusantium cumque, quas, ut corporis incidunt deserunt quae
+                architecto voluptate delectus, inventore iure aliquid aliquam.
+              </p>
+            </div>
+            <div class="user-reviews">User reviews</div>
+          </div>
         </main>
       </div>
     </div>
