--- a/index.html
+++ b/index.html
@@ -157,6 +157,41 @@
                 Accusantium cumque, quas, ut corporis incidunt deserunt quae
                 architecto voluptate delectus, inventore iure aliquid aliquam.
               </p>
+
+              <ul class="list">
+                <li class="list__item">Close to the beach</li>
+                <li class="list__item">Free airport shuttle</li>
+                <li class="list__item">Air conditioning and heating</li>
+                <li class="list__item">We speak all languages</li>
+                <li class="list__item">Breakfast included</li>
+                <li class="list__item">Free wifi in all rooms</li>
+                <li class="list__item">Pets allowed</li>
+                <li class="list__item">Perfect for families</li>
+              </ul>
+
+              <div class="recommendations">
+                <p class="recommendations__count">
+                  Lucy and 3 other friends recommend this hotel
+                </p>
+                <div class="recommendations__friends">
+                  <img
+                    src="img/user-3.jpg"
+                    alt="Image of a user"
+                    class="recommendations__img" />
+                  <img
+                    src="img/user-4.jpg"
+                    alt="Image of a user"
+                    class="recommendations__img" />
+                  <img
+                    src="img/user-5.jpg"
+                    alt="Image of a user"
+                    class="recommendations__img" />
+                  <img
+                    src="img/user-6.jpg"
+                    alt="Image of a user"
+                    class="recommendations__img" />
+                </div>
+              </div>
             </div>
             <div class="user-reviews">User reviews</div>
           </div>
