--- a/index.html
+++ b/index.html
@@ -193,7 +193,43 @@
                 </div>
               </div>
             </div>
-            <div class="user-reviews">User reviews</div>
+            <div class="user-reviews">
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
+                  doloremque architecto dicta animi, totam, itaque officia ex.
+                </blockquote>
+                <figcaption class="review__details">
+                  <img
+                    src="img/user-1.jpg"
+                    alt="Photo of user Nick Smith"
+                    class="review__img" />
+                  <div class="review__user-name-date">
+                    <p class="review__user-name">Nick Smith</p>
+                    <p class="review__date">Feb 23rd, 2024</p>
+                  </div>
+                  <div class="review__rating">7.8</div>
+                </figcaption>
+              </figure>
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
+                  doloremque architecto dicta animi.
+                </blockquote>
+                <figcaption class="review__details">
+                  <img
+                    src="img/user-2.jpg"
+                    alt="Photo of user Mary Thomas"
+                    class="review__img" />
+                  <div class="review__user-name-date">
+                    <p class="review__user-name">Mary Thomas</p>
+                    <p class="review__date">Sept 13th, 2024</p>
+                  </div>
+                  <div class="review__rating">9.3</div>
+                </figcaption>
+              </figure>
+              <button class="btn-inline">Show all &rarr;</button>
+            </div>
           </div>
         </main>
       </div>
