--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
               <div class="recommendations">
                 <p class="recommendations__count">
-                  Lucy and 3 other friends recommend this hotel
+                  Lucy and 3 other friends recommend this hotel.
                 </p>
                 <div class="recommendations__friends">
                   <img
@@ -230,6 +230,16 @@
               </figure>
               <button class="btn-inline">Show all &rarr;</button>
             </div>
+          </div>
+
+          <div class="cta">
+            <p class="cta__text">
+              Good news! We have 4 free rooms for your selected dates!
+            </p>
+            <button class="cta__btn">
+              <span class="cta__btn--visible">book now</span>
+              <span class="cta__btn--invisible">only 4 rooms left</span>
+            </button>
           </div>
         </main>
       </div>
