--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
               </div>
             </div>
-            <div class="user-reviews">
+            <figure class="user-reviews">
               <figure class="review">
                 <blockquote class="review__text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
@@ -228,8 +228,11 @@
                   <div class="review__rating">9.3</div>
                 </figcaption>
               </figure>
-              <button class="btn-inline">Show all &rarr;</button>
-            </div>
+              <button class="btn-inline">
+                Show all
+                <span>→</span>
+              </button>
+            </figure>
           </div>
 
           <div class="cta">
